* range.c: Fix rdoc on Range#bsearch [Bug #8242] [ruby-core:54143]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@41026 b2dd03c8-39d4-4d8f-98ff-823fe69b080e